# therapy-assistant

./: .gitignore  AUDIO_SETUP.md  README.md  SETUP.md  THIRD_PARTY_NOTICES.md  index.html  install.sh  package-lock.json  package.json
clients/huy/: profile.md
clients/huy/sessions/: 2026-04-21.md
clients/petya/: profile.md
clients/petya/sessions/: 2026-04-21.md
clients/vasya/: profile.md
clients/vasya/sessions/: 2026-04-21.md
my-context/: approaches.md
scripts/: build-parakeet-helper.sh  dmg-install-helper.command  dmg-readme.txt  setup-audio.sh
src/: App.css  App.tsx  design.css  main.tsx  types.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/audio/: capture.rs  mod.rs  stream.rs  transcribe_local.rs
src/components/ClientList/: ClientList.css  ClientList.tsx
src/components/ClientProfile/: ClientProfile.css  ClientProfile.tsx
src/components/FloatingHint/: FloatingHint.css  FloatingHint.tsx
src/components/Onboarding/: Onboarding.css  Onboarding.tsx
src/components/SessionView/: SessionView.css  SessionView.tsx
src/components/Settings/: Settings.css  Settings.tsx
src/hooks/: useHints.ts  useSession.ts  useTranscription.ts
src/lib/: claude.ts  storage.ts
swift-helper/: Package.swift
swift-helper/Sources/ParakeetHelper/: main.swift
