[package]
name = "therapy-assistant"
version = "0.1.1"
description = "Therapy Assistant — real-time transcription and hints for therapists"
authors = []
license = ""
repository = ""
edition = "2021"

[lib]
name = "therapy_assistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "therapy-assistant"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
cpal = "0.15"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
futures-util = "0.3"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
url = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dirs = "5"
shellexpand = "3"
reqwest = { version = "0.12", features = ["json", "native-tls"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
